<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/modify_entry_button"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_drawable"
            android:text="@string/modify_word_string"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/erase_selected"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_drawable"
            android:text="@string/erase_chosen_word"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/erase_everything"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_drawable"
            android:text="@string/erase_all"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textAlignment="center"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>