<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dictionary_base_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enter_word_definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="232dp"
        android:maxLines="2"
        android:background="@drawable/textview_drawable"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:hint="@string/hint_word_definition"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/enter_word_meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:padding="8dp"
        android:maxLines="2"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:hint="@string/hint_word_meaning"
        android:textAlignment="center"
        android:background="@drawable/textview_drawable"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_word_definition"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/add_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_drawable"
        android:text="@string/add_word_to_dictionary"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_word_meaning"
        app:layout_constraintVertical_bias="0.126" />
</androidx.constraintlayout.widget.ConstraintLayout>
